# aoc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: Cargo.toml  part.rs
