[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]

[dependencies]
# CLI
clap = { version = "4.0.29", features = ["derive", "help"] }
colored = "2.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5.9"
